fix: tweet text not showing up sometimes

--- a/src/style/page/tweet.scss
+++ b/src/style/page/tweet.scss
@@ -35,10 +35,6 @@ body[data-page-type=tweet] {
     }
 }
 
-[data-testid=tweetText]:nth-of-type(n+2) {
-    display: none;
-}
-
 // embed card links
 [data-testid="card.layoutSmall.media"] + a {
     display: flex;
